--- a/style.css
+++ b/style.css
@@ -1,1 +1,10 @@
 
+
+
+
+body {
+  font-family: 'Anton', sans-serif;
+  background-color:black;
+	background-image:url("");
+	color: white;
+       font-size: autopx;
